fixing bg image on mobile

--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -137,6 +137,10 @@
 		}
 	}
 
+	.project-testimonial {
+		background-attachment: initial;
+	}
+
 	#contact {
 		top: 0;
 	}
